作品集更新
台北捷運作品補圖
新增宜蘭好羹、渡商作品

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="一個熱愛學習的中年大叔，從事新聞工作十餘年，興趣是武術、音樂和影像創作，這是我的作品集網站，包括CIS設計、攝影、剪接、插畫，和過去採訪的新聞剪報。">
+  <meta name="description" content="一個熱愛學習的中年大叔，從事新聞工作十餘年，興趣是武術、音樂和影像創作，這是我的作品集網站，包括平面設計、3D動畫、攝影剪接、插畫，和過去採訪的新聞剪報。">
   <meta name="keywords" content="程正邦,作品集,portfolio,cis,設計,攝影,剪接特效,插畫,新聞,輔仁大學,大眾傳播,蘋果日報,記者">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="程正邦作品集" />
@@ -58,13 +58,15 @@
     <nav id="menu">
       <label for="3bar"><i class="fa fa-bars fa-3x" aria-hidden="true"></i></label><input type="checkbox" id="3bar">
       <ul>
-        <li><a id="cis" data-filter=".cis1, .cis2, .cis3, .cis4, .cis5" href="javascript:; ">DESIGN</a>
+        <li><a id="cis" data-filter=".cis1, .cis2, .cis3, .cis4, .cis5, .cis6, .cis7" href="javascript:; ">DESIGN</a>
           <ul id="submenu">
             <li id="cis1"><a data-filter=".cis1" href="javascript:;">雀姊蛋糕</a></li>
             <li id="cis2"><a data-filter=".cis2" href="javascript:;">狗日攝影</a></li>
-            <li id="cis2"><a data-filter=".cis4" href="javascript:;">武台開打</a></li>
+            <li id="cis4"><a data-filter=".cis4" href="javascript:;">武台開打</a></li>
             <li id="cis3"><a data-filter=".cis3" href="javascript:;">大叔咖啡</a></li>
-            <li id="cis3"><a data-filter=".cis5" href="javascript:;">台北捷運</a></li>
+            <li id="cis5"><a data-filter=".cis5" href="javascript:;">台北捷運</a></li>
+            <li id="cis6"><a data-filter=".cis6" href="javascript:;">宜蘭好羹</a></li>
+            <li id="cis7"><a data-filter=".cis7" href="javascript:;">渡商創研</a></li>
           </ul>
         </li>
         <li><a id="painter" data-filter=".painter" href="javascript:;"> DRAW</a></li>
@@ -622,65 +624,108 @@
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_劇院.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_劇院.png" />
+        <a href="images/捷運燈箱_劇院.png" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_劇院.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_劇院實景.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_劇院實景.jpg" />
+        <a href="images/捷運燈箱_劇院實景.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_劇院實景.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_販賣機.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_販賣機.jpg" />
+        <a href="images/捷運燈箱_販賣機.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_販賣機.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_販賣機實景.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_販賣機實景.jpg" />
+        <a href="images/捷運燈箱_販賣機實景.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_販賣機實景.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_南京復興.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_南京復興.png" />
+        <a href="images/捷運燈箱_南京復興1.png" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興1.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_招牌.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_招牌.png" />
+        <a href="images/捷運燈箱_南京復興2.png" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興2.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運燈箱_南京復興模擬圖.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運燈箱_南京復興模擬圖.jpg" />
+        <a href="images/捷運燈箱_南京復興3.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興3.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_圖文選單.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_圖文選單.png" />
+        <a href="images/捷運燈箱_南京復興4.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興4.jpg" />
+        </a>?
+        ㄤ
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/捷運燈箱_南京復興.png" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_集章據點地圖.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_集章據點地圖.png" />
+        <a href="images/捷運燈箱_招牌.png" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_招牌.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_掃描成功網頁.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_掃描成功網頁.png" />
+        <a href="images/捷運燈箱_南京復興模擬圖.jpg" data-fancybox="CIS" data-caption="台北捷運_燈箱廣告"><img src="images/捷運燈箱_南京復興模擬圖.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_掃描失敗網頁.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_掃描失敗網頁.png" />
+        <a href="images/捷運_圖文選單.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_圖文選單.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_集點卡底圖.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_集點卡底圖.png" />
+        <a href="images/捷運_集章據點地圖.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_集章據點地圖.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_獎品內容清單.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_獎品內容清單.png" />
+        <a href="images/捷運_掃描成功網頁.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_掃描成功網頁.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/捷運_集點說明立牌.png" data-fancybox="CIS" data-caption="台北捷運"><img src="images/捷運_集點說明立牌.png" />
+        <a href="images/捷運_掃描失敗網頁.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_掃描失敗網頁.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖0-04.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/雙連FB貼文圖0-04.jpg" />
+        <a href="images/捷運_集點卡底圖.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_集點卡底圖.png" />
         </a>
       </div>
+      <div class="grid-item cis5">
+        <a href="images/捷運_獎品內容清單.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_獎品內容清單.png" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/捷運_集點說明立牌.png" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/捷運_集點說明立牌.png" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖0-04.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連FB貼文圖0-04.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片1.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片1.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片2.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片2.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片3.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片3.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片4.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片4.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片5.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片5.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連_圖片6.jpg" data-fancybox="CIS" data-caption="台北捷運_振興心雙連集點抽獎活動"><img src="images/雙連_圖片6.jpg" />
+        </a>
+      </div>
+
+      
       <div class="grid-item cis5">
         <a href="images/雙連FB貼文圖_FB貼文圖 複本 10.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/雙連FB貼文圖_FB貼文圖 複本 10.jpg" />
         </a>
@@ -709,6 +754,107 @@
         <a href="images/雙連掃code圖_1014.jpg" data-fancybox="CIS" data-caption="台北捷運"><img src="images/雙連掃code圖_1014.jpg" />
         </a>
       </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭1.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭1.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭2.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭2.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭3.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭3.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_公布欄.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_公布欄.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_公車.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_公車.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_合照模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_合照模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_地圖.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_地圖.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_報到處.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_報到處.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_報到處模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_報到處模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_工作證.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_工作證.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_工作證模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_工作證模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_掛旗.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_掛旗.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_掛旗模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_掛旗模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_活動模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_活動模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_獎盃.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_獎盃.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_網站.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_網站.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_縣長模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_縣長模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_舞台模擬.jpg" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_舞台模擬.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_集點app.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_集點app.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_集點卡正.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_集點卡正.png" />
+        </a>
+      </div>
+      <div class="grid-item cis6">
+        <a href="images/宜蘭_集點卡反.png" data-fancybox="CIS" data-caption="宜蘭十大好羹票選活動"><img src="images/宜蘭_集點卡反.png" />
+        </a>
+      </div>
+      <div class="grid-item cis7">
+        <a href="images/渡商_海報1.jpg" data-fancybox="CIS" data-caption="渡商共讀會"><img src="images/渡商_海報1.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis7">
+        <a href="images/渡商_海報11.jpg" data-fancybox="CIS" data-caption="渡商共讀會"><img src="images/渡商_海報11.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis7">
+        <a href="images/渡商_海報2.jpg" data-fancybox="CIS" data-caption="渡商共讀會"><img src="images/渡商_海報2.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis7">
+        <a href="images/渡商_海報22.jpg" data-fancybox="CIS" data-caption="渡商共讀會"><img src="images/渡商_海報22.jpg" />
+        </a>
+      </div>
+     
 
       <div class="grid-item web">
         <a href="https://abonla.000webhostapp.com/web_interior" target="_blank" title=""><img
