修正圖檔名
改善圖檔名誤置錯誤

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="程正邦作品集" />
   <meta property="og:description"
-    content="一個熱愛學習的中年大叔，從事新聞工作十餘年，興趣是武術、音樂和影像創作，這是我的作品集網站，包括CIS設計、攝影、剪接、插畫，和過去採訪的新聞剪報。" />
-  <meta property="og:url" content="https://abonla.000webhostapp.com/web02/" />
+    content="一個熱愛學習的中年大叔，從事新聞工作十餘年，興趣是武術和影像創作，這是我的作品集網站，包括平面設計、網頁製作、攝影剪接、插畫，和過去採訪的新聞剪報。" />
+  <meta property="og:url" content="https://abonla.github.io/web_portfolio/" />
   <meta property="og:site_name" content="程正邦作品集" />
-  <meta property="og:image" content="https://abonla.000webhostapp.com/web02/images/web02.png" />
+  <meta property="og:image" content="images/web02.png" />
   <meta property="og:image:alt" content="程正邦作品集網站縮圖" />
   <meta property="og:image:type" content="image/png" />
 
@@ -484,7 +484,7 @@
         </a>
       </div>
       <div class="grid-item cis4">
-        <a href="images/武台開打7.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打7.png" />
+        <a href="images/武台開打7.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打7m.png" />
         </a>
       </div>
       <div class="grid-item cis4">
@@ -492,7 +492,7 @@
         </a>
       </div>
       <div class="grid-item cis4">
-        <a href="images/武台開打1.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打1.png" />
+        <a href="images/武台開打.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打m.png" />
         </a>
       </div>
       <div class="grid-item cis4">
@@ -505,10 +505,6 @@
       </div>
       <div class="grid-item cis4">
         <a href="images/武台開打4.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打4m.png" />
-        </a>
-      </div>
-      <div class="grid-item cis4">
-        <a href="images/武台開打5.png" data-fancybox="CIS" data-caption="武台開打"><img src="images/武台開打5m.png" />
         </a>
       </div>
       <div class="grid-item cis4">
@@ -748,33 +744,33 @@
 
 
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 10.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 10m.jpg" />
+        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖10m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 12.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 12m.jpg" />
+        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖12m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 15.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 15m.jpg" />
+        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖15m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 17.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 17m.jpg" />
+        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖17m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 8.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 8m.jpg" />
+        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖8m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖_FB貼文圖 複本 9.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖_FB貼文圖 複本 9m.jpg" />
+        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
+            src="images/雙連FB貼文圖9m.jpg" />
         </a>
       </div>
       <div class="grid-item cis5">
