--- a/index.html
+++ b/index.html
@@ -909,202 +909,202 @@
         </a>
       </div>
       <div class="grid-item video ">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/g53iDkd2XT4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/g53iDkd2XT4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video  ">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RVWkpp14Vew" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/RVWkpp14Vew" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jTL6z2FbwuY" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/jTL6z2FbwuY" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/M-PUCrw4GK4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/M-PUCrw4GK4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7Oz-4EobWDE" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/7Oz-4EobWDE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/ozWFct_5plc" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/ozWFct_5plc" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NwuTSDr_O-A" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/NwuTSDr_O-A" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/M7ZZksaB7xU" frameborder="0"
+        <iframe  src="https://www.youtube.com/embed/M7ZZksaB7xU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/qT6b0kXLpu4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/qT6b0kXLpu4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zStYb1VNfdg" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/zStYb1VNfdg" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/IeT3exC0I4s" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/IeT3exC0I4s" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6daJKOdlGBU" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/6daJKOdlGBU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/u_bJd2ezqdE" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/u_bJd2ezqdE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YSKXRck8Z7s" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/YSKXRck8Z7s" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NDybBGu_rPo" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/NDybBGu_rPo" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/skIlc68x97M" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/skIlc68x97M" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0F6tyGh-5Gc" frameborder="0"
+        <iframe  src="https://www.youtube.com/embed/0F6tyGh-5Gc" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uOcdC9Gbw5o" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/uOcdC9Gbw5o" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Zx-A230atEU" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/Zx-A230atEU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Xqr5ACxCb5s" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/Xqr5ACxCb5s" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0yvyIA_Bk1o" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/0yvyIA_Bk1o" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/p25axJAM9-8" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/p25axJAM9-8" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hBYL79TVI_c" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/hBYL79TVI_c" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/O0N8t0FCEX4" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/O0N8t0FCEX4" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8EI7HUFQU18" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/8EI7HUFQU18" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/t_KnQVkK0eE" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/t_KnQVkK0eE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/wYBzfp8qAq8" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/wYBzfp8qAq8" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hhWUqFY6-ls" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/hhWUqFY6-ls" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/m3JeZ3tPKg8" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/m3JeZ3tPKg8" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/yRxvvfBmsFE" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/yRxvvfBmsFE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/BtquEQUHk2w" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/BtquEQUHk2w" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/1F-YEccXh4w" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/1F-YEccXh4w" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0k-_Kx_-nHk" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/0k-_Kx_-nHk" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2ZMCNlTlfrg" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/2ZMCNlTlfrg" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/-jjPyziuzSU" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/-jjPyziuzSU" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/fFlqdmp9bG0" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/fFlqdmp9bG0" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3sJse0OTl78" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/3sJse0OTl78" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://youtube.com/embed/DjvY981WMmE" frameborder="0"
+        <iframe src="https://youtube.com/embed/DjvY981WMmE" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YdpFJhS5EjY" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/YdpFJhS5EjY" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
       <div class="grid-item video">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/kZ2G0Lz-B5E" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/kZ2G0Lz-B5E" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
