測試雙連fb縮圖不顯示問題

--- a/index.html
+++ b/index.html
@@ -742,37 +742,31 @@
         </a>
       </div>
 
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖10m.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖12m.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖15m.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖17m.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖8m.jpg" />
+        </a>
+      </div>
+      <div class="grid-item cis5">
+        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖9m.jpg" />
+        </a>
+      </div>
 
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖10m.jpg" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖12m.jpg" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖15m.jpg" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖17m.jpg" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖8m.jpg" />
-        </a>
-      </div>
-      <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
-            src="images/雙連FB貼文圖9m.jpg" />
-        </a>
-      </div>
       <div class="grid-item cis5">
         <a href="images/雙連掃code圖_1014.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
             src="images/雙連掃code圖_1014m.jpg" />
