fb不顯示縮圖換png格式

--- a/index.html
+++ b/index.html
@@ -735,27 +735,27 @@
       </div>
 
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖10m.jpg" />
+        <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連fb貼文圖10m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖12m.jpg" />
+        <a href="images/雙連FB貼文圖12.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖12m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖15m.jpg" />
+        <a href="images/雙連FB貼文圖15.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖15m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖17m.jpg" />
+        <a href="images/雙連FB貼文圖17.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖17m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖8m.jpg" />
+        <a href="images/雙連FB貼文圖8.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖8m.png" />
         </a>
       </div>
       <div class="grid-item cis5">
-        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖9m.jpg" />
+        <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖9m.png" />
         </a>
       </div>
 
