不顯示縮圖先註解

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
         </a>
       </div>
 
-      <div class="grid-item cis5">
+      <!-- <div class="grid-item cis5">
         <a href="images/雙連FB貼文圖10.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連fb貼文圖10m.png" />
         </a>
       </div>
@@ -757,7 +757,7 @@
       <div class="grid-item cis5">
         <a href="images/雙連FB貼文圖9.jpg" data-fancybox="CIS" data-caption="台北捷運_FB貼圖"><img src="images/雙連FB貼文圖9m.png" />
         </a>
-      </div>
+      </div> -->
 
       <div class="grid-item cis5">
         <a href="images/雙連掃code圖_1014.jpg" data-fancybox="CIS" data-caption="台北捷運"><img
